2004-08-23  John Paul Wallington  <jpw@gnu.org>

	* slime.el (slime-pretty-package-name): Fix last cond clause.

2004-08-21  Luke Gorrie  <luke@bluetail.com>

	* swank.lisp (*global-debugger*): New configurable to globally
	install swank-debugger-hook as *debugger-hook*. True by default.

2004-08-19  Luke Gorrie  <luke@bluetail.com>

	* doc/slime.texi: C-c C-c C-a, C-c C-u C-e.
	Thanks Barry Fishman for reporting incorrect indexing.

2004-08-18  Matthew Danish <mrd+nospam@cmu.edu>

	* slime/swank-allegro.lisp (swank-compile-string): Use #\; instead
	of #\: to separate the position from the buffer-name.  This avoids
	troubles on Windows.

2004-08-16  Luke Gorrie  <luke@bluetail.com>

	* doc/slime.texi: Random updates.

	* slime.el (slime-space): Use slime-message instead of
	slime-background-message. This displays multi-line arglists.
	(sldb-mode-map): Bind 'C' to sldb-inspect-condition.

2004-08-14  Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* slime.el (slime-find-buffer-package): Use "%s", not "%S", to
	avoid ugly escape characters, if the package name contains dots.

2004-08-13  Luke Gorrie  <luke@bluetail.com>

	* slime.el (sldb-eval-in-frame): Print result to the REPL when a
	prefix argument is given.
	Added pull-down menus for SLDB and the REPL.

	* swank-source-path-parser.lisp: Removed caching of readtables and
	the source-map hashtable. Fresh creation is ultra-cheap (<1ms).
	The caching didn't handle modifications to readtables and
	generally made me feel uneasy while tracking down an obscure bug
	in a reader macro.
	The cached source-map hashtable also wasn't thread-safe (ho hum).

2004-08-13  Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* slime.el (slime-merge-notes, slime-tree-for-note): Use the short
	note message for annotation in the source buffer and the long
	message in the tree widget.  Used to be the other way around.
	(sldb-insert-frames): Set the `start-open' property for XEmacs.